<resources>
    <string name="app_name">Score My Dive Elite</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="title_activity_welcome">Detailed Scoring</string>
    <string name="title_activity_choose_diver">Choose Diver</string>
    <string-array name="dive_array">
        <item>Click:</item>
        <item>FORWARD DIVES</item>
        <item>BACK DIVES</item>
        <item>REVERSE DIVES</item>
        <item>INWARD DIVES</item>
        <item>TWIST DIVES</item>
    </string-array>
    <string-array name="forward_dives">
        <item>101 FORWARD DIVE</item>
        <item>102 FORWARD 1 SS</item>
        <item>103 FORWARD 1 \u00bd SS</item>
        <item>104 FORWARD 2 SS</item>
        <item>105 FORWARD 2 \u00bd SS</item>
        <item>106 FORWARD 3 SS</item>
        <item>107 FORWARD 3 \u00bd SS</item>
        <item>112 FORWARD FLYING 1 SS</item>
        <item>113 FORWARD FLYING 1 \u00bd SS</item>
    </string-array>
    <string-array name="back_dives">
        <item>201 BACK DIVE</item>
        <item>202 BACK 1 SS</item>
        <item>203 BACK 1 \u00bd SS</item>
        <item>204 BACK 2 SS</item>
        <item>205 BACK 2 \u00bd SS</item>
        <item>212 FLYING BACK 1 SS</item>
    </string-array>
    <string-array name="reverse_dives">
        <item>301 REVERSE DIVE</item>
        <item>302 REVERSE 1 SS</item>
        <item>303 REVERSE 1 \u00bd SS</item>
        <item>304 REVERSE 2 SS</item>
        <item>305 REVERSE 2 \u00bd SS</item>
        <item>312 FLYING REVERSE SS</item>
    </string-array>
    <string-array name="inward_dives">
        <item>401 INWARD DIVE</item>
        <item>402 INWARD 1 SS</item>
        <item>403 INWARD 1 \u00bd SS</item>
        <item>404 INWARD 2 SS</item>
        <item>405 INWARD 2 \u00bd SS</item>
        <item>412 INWARD FLYING SS</item>
        <item>413 INWARD FLYING 1 \u00bd SS</item>
    </string-array>
    <string-array name="twist_dives">
        <item>5111 FORWARD DIVE \u00bd TWIST</item>
        <item>5112 FORWARD 1 TWIST</item>
        <item>5121 FORWARD 1 SS \u00bd TWIST</item>
        <item>5122 FORWARD 1 SS 1 TWIST</item>
        <item>5124 FORWARD 1 SS 2 TWISTS</item>
        <item>5126 FORWARD 1 SS 3 TWISTS</item>
        <item>5131 FORWARD 1 \u00bd SS \u00bd TWIST</item>
        <item>5132 FORWARD 1 \u00bd SS 1 TWIST</item>
        <item>5134 FORWARD 1 \u00bd SS 2 TWISTS</item>
        <item>5136 FORWARD 1 \u00bd SS 3 TWISTS</item>
        <item>5152 FORWARD 2 \u00bd SS 1 TWIST</item>
        <item>5211 BACK DIVE \u00bd TWIST</item>
        <item>5212 BACK DIVE 1 TWIST</item>
        <item>5221 BACK 1 SS \u00bd TWIST</item>
        <item>5222 BACK 1 SS 1 TWIST</item>
        <item>5223 BACK 1 SS 1 TWIST</item>
        <item>5225 BACK 1 SS 2 \u00bd TWISTS</item>
        <item>5227 BACK 1 SS 3 \u00bd TWISTS</item>
        <item>5231 BACK 1 \u00bd SS \u00bd TWIST</item>
        <item>5233 BACK 1 \u00bd SS 1 \u00bd TWISTS</item>
        <item>5235 BACK 1 \u00bd SS 2 \u00bd TWISTS</item>
        <item>5251 BACK 2 \u00bd SS \u00bd TWIST</item>
        <item>5311 REVERSE DIVE \u00bd TWIST</item>
        <item>5312 REVERSE DIVE 1 TWIST</item>
        <item>5321 REVERSE 1 SS \u00bd TWIST</item>
        <item>5322 REVERSE 1 SS 1 TWIST</item>
        <item>5323 REVERSE 1 SS 1 \u00bd TWISTS</item>
        <item>5325 REVERSE 1 SS 2 \u00bd TWISTS</item>
        <item>5331 REVERSE 1 \u00bd SS \u00bd TWIST</item>
        <item>5333 REVERSE 1 \u00bd SS 1 \u00bd TWISTS</item>
        <item>5335 REVERSE 1 \u00bd SS 2 \u00bd TWISTS</item>
        <item>5351 REVERSE 2 \u00bd SS \u00bd TWISTS</item>
        <item>5411 INWARD DIVE \u00bd TWIST</item>
        <item>5412 INWARD DIVE 1 TWIST</item>
        <item>5421 INWARD 1 SS \u00bd TWIST</item>
        <item>5422 INWARD 1 SS 1 TWIST</item>
        <item>5432 INWARD 1 \u00bd SS 1 TWIST</item>
        <item>5434 INWARD 1 \u00bd SS 2 TWISTS</item>
    </string-array>
    <string name="title_activity_forward_dives">Forward Dives</string>
    <string name="title_activity_back_dives">Back Dives</string>
    <string name="title_activity_reverse_dives">Reverse Dives</string>
    <string name="title_activity_inward_dives">Inward Dives</string>
    <string name="title_activity_twist_dives">Twist Dives</string>
    <string name="please_choose">Choose a Dive Category</string>
    <string name="choose_dive">Choose Dive</string>
    <string name="enter_four">Enter 4 Scores</string>
    <string name="score_1">Score 1:</string>
    <string name="score_2">Score 2:</string>
    <string name="score_3">Score 3:</string>
    <string name="score_4">Score 4:</string>
    <string name="score_5">Score 5:</string>
    <string name="score_6">Score 6:</string>
    <string name="score_7">Score 7:</string>
    <string name="total">Total</string>
    <string name="clear">Clear</string>
    <string name="enter_seven">Enter 7 Scores</string>
    <string name="choose_position">Choose a Position</string>
    <string name="tuck">C - Tuck</string>
    <string name="pike">B - Pike</string>
    <string name="straight">A - Straight</string>
    <string name="free">D - Free</string>
    <string name="how_many_judges">How Many Judges Today?</string>
    <string name="four_judges_btn">4 Judges</string>
    <string name="seven_judges_btn">7 Judges</string>
    <string name="radio_judge_3">3</string>
    <string name="radio_judge_4">4 Judges</string>
    <string name="radio_judge_5">5</string>
    <string name="radio_judge_6">6 Judges</string>
    <string name="radio_judge_7">7</string>
    <string name="radio_judge_8">8 Judges</string>
    <string name="radio_judge_9">9 Judges</string>
    <string name="enter_scores">Enter Scores</string>
    <string name="enter_name">Choose Diver</string>
    <string name="enter_diver_name">New Diver</string>
    <string name="enter_existing_meet">Enter Existing Meet</string>
    <string name="choose_name">Choose Meet</string>
    <string name="existing_diver">Existing Diver</string>
    <string name="enter_new_meet">New Meet</string>
    <string name="title_activity_choose_summary">Choose Dives</string>
    <string name="diver_name">Diver Name:</string>
    <string name="meet_name">Meet Name:</string>
    <string name="next">Next</string>
    <string name="enter_list">Enter List</string>
    <string name="dive_1">Dive 1:</string>
    <string name="dive_2">Dive 2:</string>
    <string name="dive_3">Dive 3:</string>
    <string name="dive_4">Dive 4:</string>
    <string name="dive_5">Dive 5:</string>
    <string name="dive_6">Dive 6:</string>
    <string name="dive_7">Dive 7:</string>
    <string name="dive_8">Dive 8:</string>
    <string name="dive_9">Dive 9:</string>
    <string name="dive_10">Dive 10:</string>
    <string name="dive_11">Dive 11:</string>
    <string name="score_total">Total:</string>
    <string name="score_8">Score 8:</string>
    <string name="score_9">Score 9:</string>
    <string name="enter_new_diver_info">New Diver</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="grade">Grade:</string>
    <string name="school">School:</string>
    <string name="title_activity_enter_diver">Enter New Diver</string>
    <string name="enter_new_meet_info">New Meet</string>
    <string name="enter_school">School:</string>
    <string name="enter_state">State:</string>
    <string name="enter_city">City:</string>
    <string name="enter_date">Date:</string>
    <string name="title_activity_enter_meet">Enter Meet</string>
    <string name="enter">Enter</string>
    <string name="choose_diver">Choose Diver</string>
    <string name="choose_meet">Choose Meet</string>
    <string name="choose_date">Choose Date</string>
    <string name="date_enter_style">dd/mm/yyyy</string>
    <string name="title_activity_choose">Choose your Meet</string>
    <string name="current_diver_info">View Divers</string>
    <string name="current_meet_info">View Meets</string>
    <string name="start_meet">Enter Scores</string>
    <string name="history">History</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_diver_history">Diver History</string>
    <string name="title_activity_diver_edit">Edit Diver</string>
    <string name="title_activity_diver_delete">Delete Diver</string>
    <string name="title_activity_meet_results">Meet Results</string>
    <string name="title_activity_meet_edit">Edit Meet</string>
    <string name="title_activity_meet_delete">Delete Meet</string>
    <string name="choose_diver_edit">Edit any Fields</string>
    <string name="diver_delete">Delete Diver</string>
    <string name="meet_delete">Delete Meet</string>
    <string name="choose_meet_edit">Edit Any Fields</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="welcome_add">Welcome</string>
    <string name="contact">Contact</string>
    <string name="why">My Daughter was a diver in high school and now she competes in college.
                        I built this app to keep track of scores during the meet, and hopefully you
                        find it useful. If you have any questions, find a bug, or want to request new
                        features feel free to contact me. Thanks for downloading!</string>
    <string name="my_name">Jeremey Rodriguez</string>
    <string name="email">jeremey.rodriguez@outlook.com</string>
    <string name="how_to_string">How To</string>
    <string name="failed_dive">Failed Dive</string>
    <string name="sure_failed_dive">Are you sure you want to fail this dive?</string>
    <string name="yes">Yes</string>
    <string name="return_button">Return</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sure_remove_diver">This will also delete all scores from this meet if anything has been entered.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="youtubelink">FakeLink</string>
    <string name="how_to1">\t In the Quick Score mode the only thing that will be saved is a score sheet name that you can edit, the dive
                            scores, and the total for a meet. In the Detailed Scores you can save info about multiple divers, meets, and all details
                            from a meet: Dive name, DOD, position, judge scores, total scores, dates, etc.</string>
    <string name="how_to2">\t You can enter multiple divers during a meet. Calculate scores by either entering the judges scores
                        or just enter the total score. The detailed section will keep a running total of the score as the meet progresses.
                        You can also edit the scores in case you entered the wrong value, or enter a failed dive. Use the Android
                        Menu/Overflow buttons on the top right of the screen.</string>
    <string name="how_to3">\t I encourage you to watch the YouTube video demonstration of the app and all of its features. If you have
                        questions or comments please use the About menu in the Welcome screen to contact me.</string>
    <string name="share">Share</string>
    <string name="email_results">Email Results</string>
    <string name="reports">Reports</string>
    <string name="score_my_dive">Score My Dive</string>
    <string name="quick_score">Quick Scores</string>
    <string name="detail_score">Detailed Scores</string>
    <string name="home_info">Thanks for using our App.</string>
    <string name="quick_score_info">The Quick Score option will give you a very basic score sheet that can be saved in the app.</string>
    <string name="detail_score_info">The Detailed Score option will save all details about any number of divers, meets, and scores.</string>
    <string name="delete_score_sheet">Delete Score Sheet</string>
</resources>