<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="NotSibling" >

    <TextView
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:background="@color/header"
        android:text="@string/score_my_dive"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/header_text" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Header"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp">

    <Button
        android:id="@+id/buttonQuickScore"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/quick_score"
        android:textSize="@dimen/button_text"
        android:textColor="@color/button_text"
        style="@android:style/Widget.Holo.Button"/>

    <Button
        android:id="@+id/buttonDetailScore"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/detail_score"
        android:textSize="@dimen/button_text"
        android:textColor="@color/button_text"
        style="@android:style/Widget.Holo.Button"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_info"
        android:layout_below="@id/layout1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/textView1"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/random_text"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quick_score_info"
        android:layout_below="@id/textView1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/textView2"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/random_text"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_score_info"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/textView3"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/random_text"
        android:gravity="center" />

</RelativeLayout>
