<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/AndroidDarkBlue"
        android:gravity="center"
        android:text="@string/contact"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/why"
        android:layout_below="@id/Contact"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/textView"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/random_text"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:layout_below="@id/textView"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/textView1"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/random_text"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/textView1"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/textView2"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/random_text"
        android:gravity="center"
        android:autoLink="email"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/buttonOkay"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="800dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="@dimen/button_text"
            android:textColor="@color/button_text"/>

    </LinearLayout>

</RelativeLayout>
