<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/Howto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/AndroidDarkBlue"
        android:gravity="center"
        android:text="@string/how_to_string"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to1"
        android:layout_below="@id/Howto"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/random_text"
        android:singleLine="false"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to2"
        android:layout_below="@id/text1"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/random_text"
        android:singleLine="false"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to3"
        android:layout_below="@id/text2"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/random_text"
        android:singleLine="false"/>

    <View
        android:id="@+id/View"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/text3"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/header" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/View"
        android:layout_centerHorizontal="true"
        android:src="@drawable/youtubeplayappy"
        android:contentDescription="@string/youtubelink" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/buttonOkay"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="800dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textSize="@dimen/button_text"
            android:textColor="@color/button_text"/>

    </LinearLayout>

</RelativeLayout>

</ScrollView>