<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/AndroidDarkBlue"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure_remove_diver"
        android:layout_below="@id/Delete"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/textView"
        android:textSize="16sp"
        android:textColor="@color/random_text"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/buttonCancel"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="800dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/button_text"/>

        <Button
            android:id="@+id/buttonYes"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="800dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textSize="16sp"
            android:textColor="@color/button_text"/>

    </LinearLayout>

</RelativeLayout>
